--- a/app/templates/partials/d.portfolio_menu.html
+++ b/app/templates/partials/d.portfolio_menu.html
@@ -10,6 +10,16 @@
         </div>
         <div class="row">
             <div class="col-sm-4 portfolio-item">
+                <a href="#portfolioModalGatorade" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="images/web/gatorade.jpg" class="img-responsive" alt="">
+                </a>
+            </div>
+            <div class="col-sm-4 portfolio-item">
                 <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -47,16 +57,6 @@
                         </div>
                     </div>
                     <img src="images/web/improvMasters.jpg" class="img-responsive" alt="">
-                </a>
-            </div>
-            <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModalGatorade" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i class="fa fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="images/web/fiddyStates.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
