--- a/app/templates/partials/i.portfolio_modals.html
+++ b/app/templates/partials/i.portfolio_modals.html
@@ -253,3 +253,50 @@
         </div>
     </div>
 </div>
+<div class="portfolio-modal modal fade" id="portfolioModalGatorade" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+          <div class="row">
+              <div class="col-lg-7 col-md-6 preview-page-window">
+                <a target="_blank" title="View Live Preview" href="//antonmaximus.github.io/gatorade/" class="thumbnail">
+                  <img src="images/web/gatorade.jpg" class="img-responsive" alt="Free Bootstrap 3 Themes and Templates">
+                </a>
+              
+                <ul class="list-inline preview-links">
+                  <li><a target="_blank" href="//antonmaximus.github.io/gatorade/" class="btn btn-info"><i class="fa fa-eye"></i> Live Preview</a></li>
+                  <li><a target="_blank" href="//github.com/antonmaximus/gatorade" class="btn btn-info"><i class="fa fa-github"></i> View Source on GitHub</a></li>
+                </ul>
+
+              </div>
+              <div class="col-lg-5 col-md-6 preview-page-content">
+                <h3>Mobile Interactive Ad</h3>
+                <h4>Description:</h4>
+                <p>A mobile ad that handles touch events and allows for interaction on cellphones or tablets. When the ad is viewed on a desktop, it falls back to support mouse events.</p>
+                <h4>Technologies Used:</h4>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>HTML/HAML</li>
+                    <li>CSS/SCSS</li>
+                </ul>
+                <h4>Features:</h4>
+                <ul>
+                    <li>Mobile Touch Events</li>
+                    <li>No jQuery</li>
+                </ul>
+              </div>
+            </div>
+          <div class='row'>
+              <div class="col-xs-12">
+                  <br>
+                  <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                </div>
+          </div>
+        </div>
+    </div>
+</div>
